2000-05-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (IS_INF, isfinite):  Added FIXME comment.

	(scm_abs, scm_magnitude):  Make these two independent of each
	other.  scm_abs now reports an error if given a complex argument.

	(scm_istr2flo, scm_integer_p).  Use SCM_REAL_VALUE instead of
	SCM_REALPART if the object is known to be real.

	(scm_init_numbers):  No need to use SCM_NEWREAL macro for speed
	here.

	* numbers.h (SCM_SINGP):  Set to 0 instead of SCM_BOOL_F.

2000-05-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eq.c (scm_eqv_p):  Separate handling of real and complex
	values.  Remove #ifdef SCM_BIGDIG #endif test.

	* eval.c (SCM_CEVAL, SCM_APPLY), gh_data.c (gh_scm2floats,
	gh_scm2doubles), hash.c (scm_hasher), ramap.c (scm_array_fill_int,
	ramap_rp, scm_array_map_x), random.c (vector_scale,
	vector_sum_squares), unif.c (scm_make_uve, scm_array_p,
	scm_array_set_x):  Use SCM_REAL_VALUE instead of SCM_REALPART if
	the object is known to be real.  Use SCM_COMPLEXP instead of
	deprecated SCM_CPLXP.  Use SCM_INEXACTP instead of deprecated
	SCM_INEXP.

2000-05-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c:  No need to include unif.h.

	(IS_INF):  Returned to old test for now:  x == x + 1 will not work
	for large numbers due to rounding errors.
	Thanks to Kalle Olavi Niemitalo.

2000-05-09  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_divbigdig):  Removed outdated comment.

	(scm_number_to_string, scm_string_to_number, scm_number_p,
	scm_real_p, scm_integer_p, scm_inexact_p, scm_gr_p, scm_leq_p,
	scm_geq_p, scm_make_rectangular, scm_make_polar,
	scm_inexact_to_exact):  Added comments.

	(add1, scm_init_numbers):  Removed add1.

2000-05-09  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (IS_INF):  The new test is x == x + 1.  The old test
	x == x/2 did not work for zero values.  Thanks to Han-Wen Nienhuys
	and Ivan Toshkov.

	(scm_number_to_string, scm_sum, scm_difference, scm_two_doubles,